--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Font Awesome -->
+	<meta name="description" content="Hi, I'm Symfony Developer, a passonate web developer looking oppurtunity as Symfony developer.">
+	<meta name="Keywords" content="Symofny, Symfony Developer, Web Developer, PHP, Symfony, HTML, CSS" />
+<!-- Font Awesome -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -16,7 +18,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
   /> -->
-	<title>Pranan Subba</title>
+	<title>Pranan Subba | Symfony Developer</title>
 	<style>
 @import url('https://fonts.googleapis.com/css2?family=Gurajada&family=IM+Fell+DW+Pica&display=swap');	
 		.navbar-nav li a:hover{
@@ -95,8 +97,8 @@
 				<div class="mt-3 mb-3">
 					<!-- <i class="fab fa-facebook-f mr-3"></i> -->
 					<a href="https://github.com/TsongSteven" target="_blank"><i class="fab fa-github mr-3"></i></a>
-					<!-- <i class="fab fa-linkedin mr-3"></i>
-					<i class="far fa-envelope"></i> -->
+					<a href="https://www.linkedin.com/in/pranan-subba-348848129/" target="_blank"></a><i class="fab fa-linkedin mr-3"></i></a>
+					<!-- <i class="far fa-envelope"></i> -->
 				</div>
 				<a href="mailto:pranansubba@gmail.com" class="contact_me _font text-dark">CONTACT ME</a>			
 				
