Linked URL Resolved

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<div class="mt-3 mb-3">
 					<!-- <i class="fab fa-facebook-f mr-3"></i> -->
 					<a href="https://github.com/TsongSteven" target="_blank"><i class="fab fa-github mr-3"></i></a>
-					<a href="https://www.linkedin.com/in/pranan-subba-348848129/" target="_blank"></a><i class="fab fa-linkedin mr-3"></i></a>
+					<a href="https://www.linkedin.com/in/pranan-subba-348848129/" target="_blank"><i class="fab fa-linkedin mr-3"></i></a>
 					<!-- <i class="far fa-envelope"></i> -->
 				</div>
 				<a href="mailto:pranansubba@gmail.com" class="contact_me _font text-dark">CONTACT ME</a>			
