react js updated

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@ d of the web development, and gradually I began to explore more about the web te
 			<div class="col-md-4">
 				<div class="card rounded-0 text-center border border-0 bg-grey lighten-5">
 					<div class="card-body">
-						<p class="_font">REACT</p>
-						<p class="_font">Learning</p>
+						<p class="_font">REACT JS</p>
+						<p class="_font">Learning...</p>
 					</div>
 				</div>
 			</div>				
