Few Projects added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<div class="col-md-8">
 				<h2 style="font-size: 40px">About me</h2>
 				<p>I'm <span class="text-indigo"><b>Pranan Subba</b></span> from Darjeeling, West Bengal, India.</p>
-				<p>I have been involved in the field of Web Development for four years, during which I've gained
+				<p>I have been involved in the field of Web Development for four + years, during which I've gained
 					experience working on a diverse range of projects, from complex undertakings to various other
 					assignments. My skill set includes proficiency in technologies such as PHP, the Symfony Framework,
 					GIT, HTML & CSS, and JavaScript.</p>
@@ -203,6 +203,22 @@
 				</div>
 			</div>
 		</div>
+		<h4><b>Other Projects</b></h4>
+		<h5><b>SchlesingerGroup(SAGO)</b></h5>
+		<ul>
+			<li>Developed the "PmTool" using Symfony framework.</li>
+			<li>Utilized PropelOrm for efficient database management.</li>
+			<li>Integrated MySQL, Salesforce, and RestApi technologies.</li>
+			<li>Used Azure as Project management Tool.</li>
+		</ul>
+		<h5><b>ISHA Foundation(Sadhguru)</b></h5>
+		<ul>
+			<li>Worked as a PHP Developer in the "Isha Foundation" project.</li>
+			<li>Utilized technologies such as PHP and Koolreport for backend development.</li>
+			<li>Employed HTML, CSS, jQuery, and Bootstrap 4 for frontend implementation.</li>
+			<li>Managed the MySQL database for efficient data storage.</li>
+			<li>Used Jira as Project management Tool.</li>
+		</ul>
 	</div>
 
 	<div class="container mt-4" id="contact">
