visithappytrip project added

--- a/index.html
+++ b/index.html
@@ -196,7 +196,30 @@
 									Symfony 6.
 								</p>
 								<p>Link: <a href="https://christinstituteofnursing.co.in/" target="_blank">Christ
-										Institute of Nursing(Not updated yet)</a></p>
+										Institute of Nursing</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<div class="card mb-3">
+					<div class="row g-0">
+						<div class="col-md-4">
+							<img src="./img/visithappytrip.jpg" class="img-fluid">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<p class="card-text text-justify">
+									"Visit Happy Trip" is a travel website specializing in Bhutan tours and experiences,
+									built using the Symfony 7 framework. It offers curated travel packages, cultural
+									experiences, and adventure trips, providing seamless booking and personalized
+									itineraries for travelers exploring Bhutan.
+								</p>
+								<p>Link: <a href="https://www.visithappytrip.com/" target="_blank">Visit Happy
+										Trip</a></p>
 							</div>
 						</div>
 					</div>
