Added Paypal + Symfony Blog

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 					<li class="nav-item"><a class="nav-link text-white" href="#about">About Me</a></li>
 					<li class="nav-item"><a class="nav-link text-white" href="#tech">Technologies</a></li>
 					<li class="nav-item"><a class="nav-link text-white" href="#project">Projects</a></li>
+					<li class="nav-item"><a class="nav-link text-white" href="#blog">Blog</a></li>
 					<li class="nav-item"><a class="nav-link text-white" href="#contact">Contact</a></li>
 				</ul>
 			</div>
@@ -244,6 +245,28 @@
 		</ul>
 	</div>
 
+	<div class="container mt-4" id="blog">
+		<h4 style="font-size: 40px" class="_font mb-3">Blogs..</h4>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="card mb-3">
+					<div class="row g-0">
+						<img src="./img/papal_with_symfony.webp" class="img-fluid">
+						<div class="card-body">
+							<h5 class="card-title"><b>Papal with Symfony 6</b></h5>
+							<p class="card-text text-justify">
+								Discover how to integrate Papal with Symfony, enabling seamless payment processing in your
+								Symfony applications. This guide covers the essential steps to set up and configure Papal
+								for efficient payment handling.
+							</p>
+							<p>Link: <a href="https://medium.com/p/e7ca6e7da73b" target="_blank">View</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="container mt-4" id="contact">
 		<h4 class="_font mb-3" style="font-size: 40px">Contact..</h4>
 		<div class="row text-center">
@@ -252,7 +275,8 @@
 			</div>
 			<div class="col-md-6">
 
-				<p class="_font">If you think I'm a suitable person for your company or project, then please drop your
+				<p class="_font">If you think I'm a suitable person for your company or project, then please drop
+					your
 					message on the following Email..<br>&lt;pranansubba@gmail.com/&gt; </p>
 			</div>
 
