--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 		@import url('https://fonts.googleapis.com/css2?family=Gurajada&family=IM+Fell+DW+Pica&display=swap');
 	</style>
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-2D1N8H0D09"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FKP2R1VY8Y"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 
-		gtag('config', 'G-2D1N8H0D09');
+		gtag('config', 'G-FKP2R1VY8Y');
 	</script>
 </head>
 
@@ -255,8 +255,10 @@
 						<div class="card-body">
 							<h5 class="card-title"><b>Papal with Symfony 6</b></h5>
 							<p class="card-text text-justify">
-								Discover how to integrate Papal with Symfony, enabling seamless payment processing in your
-								Symfony applications. This guide covers the essential steps to set up and configure Papal
+								Discover how to integrate Papal with Symfony, enabling seamless payment processing in
+								your
+								Symfony applications. This guide covers the essential steps to set up and configure
+								Papal
 								for efficient payment handling.
 							</p>
 							<p>Link: <a href="https://medium.com/p/e7ca6e7da73b" target="_blank">View</a></p>
